Fix issues on safari

--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -257,8 +257,7 @@
 
 	.form__head {
 		max-width: 630px;
-		margin-left: auto;
-		margin-right: auto;
+		margin: 0 auto 45px;
 		text-align: center;
 	}
 
@@ -274,7 +273,11 @@
 	}
 
 	.form__body {
-		margin: 50px 0 65px;
+		margin: 35px 0;
+	}
+
+	.form__actions ul {
+		justify-content: center;
 	}
 
 	.field__label,
